# Python_Modules

Python_0/ex5/: ft_count_harvest_recursive.py
Python_0/ex6/: ft_garden_summary.py
Python_0/ex7/: ft_seed_inventory.py
Python_1/ex0/: ft_garden_intro.py
Python_1/ex1/: ft_garden_data.py
Python_1/ex2/: ft_plant_growth.py
Python_1/ex3/: ft_plant_factory.py
Python_1/ex4/: ft_garden_security.py
Python_1/ex5/: ft_plant_types.py
Python_1/ex6/: ft_garden_analytics.py  ft_garden_analytics2.py
Python_10/ex0/: lambda_spells.py
Python_10/ex1/: higher_magic.py
Python_10/ex2/: scope_mysteries.py
Python_10/ex3/: functools_artifacts.py
Python_10/ex4/: decorator_mastery.py
Python_2/ex0/: ft_first_exception.py
Python_2/ex1/: ft_different_errors.py
Python_2/ex2/: ft_custom_errors.py
Python_2/ex3/: ft_finally_block.py
Python_2/ex4/: ft_raise_errors.py
Python_2/ex5/: ft_garden_management.py
Python_3/: test.py
Python_3/ex0/: ft_command_quest.py
Python_3/ex1/: ft_score_analytics.py
Python_3/ex2/: ft_coordinate_system.py
Python_3/ex3/: ft_achievement_tracker.py
Python_3/ex4/: ft_inventory_system.py
Python_3/ex5/: ft_data_stream.py
Python_3/ex6/: ft_analytics_dashboard.py
Python_4/ex0/: ft_ancient_text.py
Python_4/ex1/: ft_archive_creation.py
Python_4/ex2/: ft_stream_management.py
Python_4/ex3/: ft_vault_security.py
Python_5/: stream_processor.py
Python_5/ex1/: data_stream.py
Python_6/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_8/ex1/: loading.py  pyproject.toml  test.py
(+35 files in other folders)
