[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "gnadais-"}
]
requires-python = "3.10.12"
dependencies = [
    "numpy (==2.2.6)",
    "pandas (==2.3.3)",
    "matplotlib (==3.10.8)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
