[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "gnadais-"}
]
package-mode = false
requires-python = "^3.10.12"
dependencies = [
    "numpy (>=1.24,<2.0)",
    "pandas (>=2.0,<3.0)",
    "matplotlib (>=3.7,<4.0)",
    "requests (>=2.31,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
